name:                cfm-rtl
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Cliff L. Biffle
maintainer:          code@cliffle.com
copyright:           2017 Cliff L. Biffle
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       Types
                       Beh
                       Str
                       CFMTop
  build-depends:       base >= 4.7 && < 5
                     , ghc-typelits-extra
                     , ghc-typelits-natnormalise
                     , ghc-typelits-knownnat
                     , clash-prelude
                     , clash-ghc
                     , lens
                     , mtl
                     , deepseq
  default-language:    Haskell2010
  ghc-options:         -fplugin=GHC.TypeLits.Extra.Solver
                       -fplugin=GHC.TypeLits.Normalise
                       -fplugin=GHC.TypeLits.KnownNat.Solver
                       -Wall

test-suite cfm-rtl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ghc-typelits-extra
                     , ghc-typelits-natnormalise
                     , ghc-typelits-knownnat
                     , cfm-rtl
                     , clash-prelude
                     , hspec
                     , QuickCheck
                     , lens
                     , deepseq
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -fplugin=GHC.TypeLits.Extra.Solver
                       -fplugin=GHC.TypeLits.Normalise
                       -fplugin=GHC.TypeLits.KnownNat.Solver
  default-language:    Haskell2010
  other-modules:       BehSpec
                       StrSpec
                       TestUtil
