name:                cfm-tools
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Cliff L. Biffle
maintainer:          code@cliffle.com
copyright:           2017 Cliff L. Biffle
category:            Hardware
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       Parser
                       InstInfo
                       Target
                       Target.RTL
  build-depends:       base >= 4.7 && < 5
                     , clash-prelude
                     , parsec
                     , data-default
                     , containers
                     , mtl
                     , monad-coroutine
                     , cfm-arch
                     , cfm-rtl
  default-language:    Haskell2010
  ghc-options:        -Wall

executable cfm-as
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -Wall
  build-depends:       base
                     , clash-prelude
                     , cfm-tools
                     , parsec
                     , containers
                     , lens
                     , mtl
                     , data-default
                     , cfm-arch
  default-language:    Haskell2010

executable enumerator
  hs-source-dirs:      app
  main-is:             Enumerator.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -Wall
  build-depends:       base
                     , cfm-tools
                     , parsec
                     , containers
                     , lens
                     , mtl
                     , data-default
                     , cfm-arch
  default-language:    Haskell2010

test-suite cfm-tools-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cfm-tools
                     , clash-prelude
                     , hspec
                     , QuickCheck
                     , cfm-arch
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       Target.RTLSpec
