name:                tools
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cbiffle/tools#readme
license:             BSD3
license-file:        LICENSE
author:              Cliff L. Biffle
maintainer:          code@cliffle.com
copyright:           2017 Cliff L. Biffle
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       Parser
                       InstInfo
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , data-default
                     , containers
                     , mtl
  default-language:    Haskell2010
  ghc-options:        -Wall

executable tools-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -Wall
  build-depends:       base
                     , tools
                     , parsec
                     , containers
                     , lens
                     , mtl
                     , data-default
  default-language:    Haskell2010

test-suite tools-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tools
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       FusionSpec

source-repository head
  type:     git
  location: https://github.com/cbiffle/tools
